--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,17 @@
   color: white;
   text-decoration: none;
 }
+
+.container {
+  min-height: 40vh;
+  padding: 20px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  padding: 20px 0px;
+  color: #fd2a36;
+  text-align: center;
+}
